@@ -17,6 +17,7 @@ version 0.54
 	* Buddylist tab placement option (Thanks Jason Willis)
 	* Protocol specific smiley faces
 	* Italian translation added
+	* IM Image sending
 	
 version 0.53 (02/28/2002):
 	* Updated Polish Translation (thanks Przemyslaw Sulek)
